--- a/DarkMoonProject/Assets/Game/Resources/Json/itemsConfig.json
+++ b/DarkMoonProject/Assets/Game/Resources/Json/itemsConfig.json
@@ -11,7 +11,7 @@
             "id": 2,
             "itemType": 2,
             "itemName": "仙女祝福",
-            "iconUrl": "",
+            "iconUrl": "hypnotist",
             "describe": "我曾赋予匹诺曹生命，也赠送过灰姑娘水晶鞋"
         }
     ]
