添加战斗item逻辑。

--- a/DarkMoonProject/Assets/Game/Resources/Json/itemsConfig.json
+++ b/DarkMoonProject/Assets/Game/Resources/Json/itemsConfig.json
@@ -4,15 +4,22 @@
             "id": 1,
             "itemType": 1,
             "itemName": "仙女祝福",
-            "iconUrl": "",
+            "iconUrl": "Textures/BattleIcon/banshee",
             "describe": "我曾赋予匹诺曹生命，也赠送过灰姑娘水晶鞋"
         },
         {
             "id": 2,
             "itemType": 2,
-            "itemName": "仙女祝福",
-            "iconUrl": "hypnotist",
-            "describe": "我曾赋予匹诺曹生命，也赠送过灰姑娘水晶鞋"
+            "itemName": "催眠师",
+            "iconUrl": "Textures/BattleIcon/hypnotist",
+            "describe": "他看起来昏昏入睡"
+        },
+        {
+            "id": 3,
+            "itemType": 3,
+            "itemName": "收藏家",
+            "iconUrl": "Textures/BattleIcon/dealer",
+            "describe": "每张卡都用它的价值"
         }
     ]
 }
