添加战斗选择界面。

--- a/DarkMoonProject/Assets/Game/Resources/Json/itemsConfig.json
+++ b/DarkMoonProject/Assets/Game/Resources/Json/itemsConfig.json
@@ -12,14 +12,20 @@
             "itemType": 2,
             "itemName": "催眠师",
             "iconUrl": "Textures/BattleIcon/hypnotist",
-            "describe": "他看起来昏昏入睡"
+            "describe": "他看起来昏昏入睡",
+            "cardList": [
+                1
+            ],
+            "monsterHp": 10,
+            "actionValue": 2,
+            "magicValue": 15
         },
         {
             "id": 3,
             "itemType": 3,
             "itemName": "收藏家",
             "iconUrl": "Textures/BattleIcon/dealer",
-            "describe": "每张卡都用它的价值"
+            "describe": "每张卡都有它的价值"
         }
     ]
 }
