--- a/DarkMoonProject/Assets/Game/Resources/Json/itemsConfig.json
+++ b/DarkMoonProject/Assets/Game/Resources/Json/itemsConfig.json
@@ -12,13 +12,7 @@
             "itemType": 2,
             "itemName": "催眠师",
             "iconUrl": "Textures/BattleIcon/hypnotist",
-            "describe": "他看起来昏昏入睡",
-            "cardList": [
-                1
-            ],
-            "monsterHp": 10,
-            "actionValue": 2,
-            "magicValue": 15
+            "describe": "他看起来昏昏入睡"
         },
         {
             "id": 3,
