--- a/DarkMoonProject/Assets/Game/Resources/Json/monsterConfig.json
+++ b/DarkMoonProject/Assets/Game/Resources/Json/monsterConfig.json
@@ -7,7 +7,8 @@
             ],
             "monsterHp": 10,
             "actionValue": 2,
-            "magicValue": 15
+            "magicValue": 15,
+            "url": "Prefab/Monster/hypnotist"
         }
     ]
 }
