--- a/DarkMoonProject/Assets/Game/Resources/Json/playerDataConfig.json
+++ b/DarkMoonProject/Assets/Game/Resources/Json/playerDataConfig.json
@@ -1,14 +1,1 @@
-{
-    "isNewPlayer": false,
-    "drawCardCount": 5,
-    "cardList": [
-        1,
-        2,
-        3,
-        4,
-        5
-    ],
-    "magicValue": 10,
-    "actionValue": 3,
-    "hpValue": 25
-}
+{"isNewPlayer":false,"drawCardCount":5,"cardList":[1,2,3,4,5],"magicValue":10,"actionValue":3,"hpValue":25}
